--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/generator-helper": "^2.0.0-beta.4",
     "common-tags": "^1.8.0",
     "fs-extra": "^9.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "reason-promise": "^1.0.2"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
