--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "prisma-client-reason",
   "version": "0.0.1",
-  "main": "dist/generator.js",
   "author": "Torben Ewert",
+  "contributors": [
+    {
+      "name": "Rob Hilgefort",
+      "email": "rjhilgefort@gmail.com",
+      "url": "http://rob.hilgefort.me/"
+    }
+  ],
   "license": "MIT",
+  "main": "dist/generator.js",
   "scripts": {
+    "clean": "run-p clean:*",
+    "clean:node_modules": "rm -rf node_modules",
+    "clean:build": "rm -rf dist",
+    "reinstall": "yarn clean:node_modules && yarn install",
     "start": "nodemon",
-    "build": "tsc"
+    "build": "tsc && chmod +x ./dist/generator.js",
+    "rebuild": "run-s clean:build build",
+    "setup": "yarn install && yarn build",
+    "resetup": "run-s clean setup"
   },
   "dependencies": {
-    "@prisma/generator-helper": "^2.0.0-beta.4",
+    "@prisma/generator-helper": "^2.23.0",
     "common-tags": "^1.8.0",
     "fs-extra": "^9.0.0",
     "lodash": "^4.17.15",
@@ -20,6 +34,7 @@
     "@types/fs-extra": "^8.1.0",
     "@types/lodash": "^4.14.150",
     "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
     "ts-node-dev": "1.0.0-pre.44",
     "typescript": "3.8.3"
   },
