--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "lib": ["esnext", "dom"],
     // "strict": true, // `strict` is commented because of this issue: https://github.com/prisma/prisma/issues/3774; all its options except `strictNullChecks` & `strictPropertyInitialization` are explicitly set below.
     "noImplicitThis": true,
-    "alwaysStrict": true,
+    "alwaysStrict": false,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "skipLibCheck": true
